--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Christmas Time</title>
   </head>
   <body>
-    <h1>Christmas Day 2021</h1>
+    <h1>Christmas Day</h1>
+    <h2>
+      <div id="year">2021</div>
+    </h1>
 
     <div class="countdown-timer">
       <div class="countdown-element days-container">
