--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Christmas Time</title>
   </head>
   <body>
-    <h1>Christmas Day</h1>
+    <h1 class="big-text">Christmas Day</h1>
     <h2>
-      <div id="year">2021</div>
+      <div id="current-year"></div>
     </h1>
 
     <div class="countdown-timer">
